Add ICOMP conference

--- a/src/data/conferences.yml
+++ b/src/data/conferences.yml
@@ -784,3 +784,18 @@
   tags:
   - machine-learning
   - data-mining
+
+- title: ICOMP
+  year: 2025
+  id: icomp25
+  full_name: International Conference on Computational Optimization
+  link: https://icomp.cc/
+  deadline: 2025-08-15 23:59
+  abstract_deadline: 2025-08-01 23:59
+  timezone: UTC-12
+  city: Abu Dhabi
+  country: UAE
+  date: October, 2025
+  tags:
+  - machine-learning
+  - optimization
